# t5chem

./: .gitignore  .mcp.json  README.md  README.rst  README_MCP.md  mcp_config.example.json  predict_single.py  pyproject.toml
t5chem/: __init__.py  __main__.py  data_utils.py  evaluation.py  mcp_server.py  model.py  mol_tokenizers.py  run_prediction.py  run_trainer.py
t5chem/vocab/: atom.txt  simple.txt
tests/: test_sample.py
